Fixed rose party image / added golden skeletons project / fixed menu font on mobile

--- a/style.css
+++ b/style.css
@@ -363,6 +363,7 @@
   .navbar .menu-items{
     z-index: 200;
     width: 30%;
+    font-size: 1.1rem;
   }
   .logo{
     padding: 10px;
